[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coder2api"
version = "0.1.0"
description = "Turn Gemini-CLI, Claude Code, and Codex into a local OpenAI-compatible API endpoint."
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "litestar>=2.12.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "chatmock",
    "claude-code-api",
]

[project.scripts]
coder2api = "coder2api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coder2api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/coder2api",
    "coders",
]

# We need to make sure 'coders' is included in the wheel as data or resource
# Since 'coders' is outside the package, we map it.
# However, mapping files outside the package into the package is tricky with standard wheels.
# We will include it in the source distribution (sdist) so pip install works from sdist.
# For wheels, we need to map it to a location relative to the package?
# Or we can just install it as data files?
# Let's try to force inclusion.

[tool.hatch.build.targets.wheel.force-include]
"coders" = "coder2api/coders"

[tool.uv.sources]
chatmock = { path = "coders/ChatMock", editable = true }
claude-code-api = { path = "coders/claude-code-api", editable = true }