[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coder2api"
version = "0.1.0"
description = "Turn Gemini-CLI, Claude Code, and Codex into a local OpenAI-compatible API endpoint."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "litestar>=2.12.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    # ChatMock Dependencies
    "certifi>=2024.0.0",
    "click>=8.0.0",
    "flask>=3.0.0",
    "idna>=3.0",
    "itsdangerous>=2.0.0",
    "jinja2>=3.0.0",
    "markupsafe>=2.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "werkzeug>=3.0.0",
    # Claude Code API Dependencies
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.0.0",
    "structlog>=23.0.0",
    "asyncio-mqtt>=0.16.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.scripts]
coder2api = "coder2api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coder2api", "src/chatmock", "src/claude_code_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/coder2api",
    "src/chatmock",
    "src/claude_code_api",
]

[tool.hatch.build.hooks.custom]